--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
   {
-  "name": "Events",
-  "version": "0.0.0",
+  "name": "Eventos",
+  "version": "0.0.1",
   "dependencies": {
     "ionic": "v1.0.0-beta.14",
     "ngCordova": "~0.1.10-alpha",
