--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "Events",
+  "name": "Eventos",
   "version": "0.1.0",
   "private": true,
-  "dependencies": { },
+  "dependencies": {},
   "devDependencies": {
     "bower": "^1.3.3",
+    "connect-livereload": "~0.2.0",
     "cordova": "~3.5.0-0.2.6",
     "glob": "~4.0.5",
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "~0.4.0",
+    "grunt-autoprefixer": "^2.2.0",
     "grunt-concurrent": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
@@ -18,12 +19,13 @@
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-contrib-sass": "^0.8.1",
-    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-karma": "~0.8.0",
     "grunt-newer": "~0.6.1",
     "grunt-ng-annotate": "~0.2.3",
     "grunt-ng-constant": "^0.5.0",
+    "grunt-replace": "~0.5.1",
     "grunt-usemin": "~2.0.0",
     "grunt-wiredep": "^1.7.0",
     "gulp-util": "^2.2.14",
@@ -39,14 +41,12 @@
     "lodash": "~2.4.1",
     "mkdirp": "~0.5.0",
     "ncp": "~0.6.0",
+    "ng-resource": "^1.3.2",
     "orchestrator": "~0.3.7",
     "ripple-emulator": "~0.9.23",
     "shelljs": "^0.3.0",
-    "time-grunt": "~0.2.1",
-    "ng-resource": "^1.3.2",
-    "connect-livereload": "~0.2.0",
-    "grunt-replace": "~0.5.1",
-    "squel": "^3.10.0"
+    "squel": "^3.10.0",
+    "time-grunt": "~0.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
