--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,14 @@
   {
-  "name": "Eventos",
-  "version": "0.0.1",
+  "name": "Events",
+  "version": "0.0.0",
   "dependencies": {
     "ionic": "v1.0.0-beta.14",
     "ngCordova": "~0.1.10-alpha",
     "angular-resource": "1.3.6",
     "ionicons": "~2.0.1",
     "ngCordovaCustom": "./custom-libs/ng-cordova-custom.js",
-    "squel": "./custom-libs/squel.min.js"
+    "squel": "./custom-libs/squel.min.js",
+    "bindonce": "./custom-libs/bindonce.min.js"
   },
   "resolutions": {
     "ionic": "v1.0.0-beta.14",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "ng-cordova-mocks": "./custom-libs/ng-cordova-mocks.js",
     "angular-mocks": "1.3.6",
-    "databasePopulator": "./custom-libs/databasePopulator.js"
+    "databasePopulator": "./custom-libs/databasePopulator.js",
+    "bindonce": "./custom-libs/bindonce.min.js"
   }
 }
